--- a/brigadeiria/produtos/static/CSS/perfil.css
+++ b/brigadeiria/produtos/static/CSS/perfil.css
@@ -49,7 +49,7 @@
 .titulo {
   font-size: 1.6rem;
   font-weight: 700;
-  color: #a56b3c;
+  color: #353535;
   margin-bottom: 10px;
   text-align: center;
 }
