--- a/brigadeiria/produtos/templates/perfil.html
+++ b/brigadeiria/produtos/templates/perfil.html
@@ -70,7 +70,8 @@
             <input type="email" name="email" placeholder="E-mail" required>
             <input type="tel" name="telefone" placeholder="Telefone" required>
             <input type="password" name="senha" placeholder="Senha" required>
-            <input type="password" name="confirmar" placeholder="Confirmar senha" required>
+            <input type="password" name="confirmarSenha" placeholder="Confirmar senha" required>
+
             <input type="text" name="endereco" placeholder="Endereço">
             <input type="number" name="cep" placeholder="CEP">
             <input type="text" name="complemento" placeholder="Complemento">
