--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -143,5 +143,6 @@
   <!-- JS -->
   <script src="{% static 'JS/search.js' %}"></script>
   <script src="{% static 'JS/carrossel.js' %}"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
 </body>
 </html>
